<resources>
    <string name="app_name" translatable="false">UsbBackup</string>

    <string name="donate">Donate</string>
    <string name="made_by">Made by:</string>
    <string name="help">Help</string>
    <string name="copyright" translatable="false">"GPLv3 - ©%1$s "</string>
    <string name="back">Back</string>


    <string name="intro_slide_welcome_title">Welcome!</string>
    <string name="intro_slide_welcome_description">This app will help you quickly back up important files to a thumbdrive. Please read the upcoming slides carefully!</string>


    <string name="intro_slide_notification_title">Get Notified!</string>
    <string name="intro_slide_notification_description">We want to show you notifications when the backup is running. We wont spam you!</string>


    <string name="intro_slide_warning_title">Warning!</string>
    <string name="intro_slide_warning_description">The encryption process was not peer-reviewed. It uses AES-256, but the implementation was not checked. Use at your own risk!</string>

    <string name="intro_slide_done_title">Done!</string>
    <string name="intro_slide_done_description">You are now ready to start! You can now configure your backups!</string>
    <string name="about">About</string>
    <string name="source_folder">Select sources for archival:</string>
    <string name="target_folder">Select archival location:</string>
    <string name="title_of_the_task">Title of the Task</string>
    <string name="warning_no_password_set">No password set. Please enter a password!</string>
    <string name="password">Password</string>
    <string name="delete_button_for_source_item">Delete Button for Source Item</string>
    <string name="starting_scan_service">Starting scan service…</string>
    <string name="warningTimeout">Warning Timeout</string>
    <string name="add_view_warning_timeout_helper">In Days. Enter 0 to disable.</string>
    <string name="last_successful_run">Last Archive %s</string>
    <string name="remaining_time_til_next_run">Due: %s</string>
    <string name="about_icon_description">Icon of this App</string>
    <string name="add_down_icon_description">Spacer icon, Arrow facing downward to indicate data flowing from the above list to the selected folder below.</string>
    <string name="add_fakelistheader_encrypt">Encrypt</string>
    <string name="add_warning_icon_description">Icon in the form of an open lock. Warning that no password is set.</string>
    <string name="add_fabicon_description">Floating Action Button with a save icon.</string>
    <string name="main_mainicon_description">App Logo in form of a usb-stick</string>
    <string name="main_cryptowarning_icon_description">Circle with an I inside. Indicating additional information</string>
    <string name="main_cryptowarning">Warning! This app\'s cryptography has not been independently verified. Use at your own risk!</string>
    <string name="main_addicon_description">Floating Action Button with a plus sign, indicating adding an configuration entry</string>
    <string name="menu_main_checkoutdated">Check for outdated Archives</string>
    <string name="duplicate">Duplicate</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="media_available_click_to_make_a_backup">Media Available. Click to make a backup!</string>
    <string name="warning_no_password_set_backup_will_be_unencrypted">Warning! No password set. Backup will be unencrypted!</string>
    <string name="archival_location">Archival Location:</string>
    <string name="folders">Folders:</string>
    <string name="notification_last_backup_outdated">Backup \'%1$s\' outdated!</string>
    <string name="notification_last_backup_outdated_description">Last Backup: %1$s Please insert the appropriate media soon!</string>
    <string name="notification_scanning_storage">Scanning newly attached storage…</string>
    <string name="notification_scanning_storage_description">We will start a backup when we find appropriate storage media!</string>
    <string name="cancel">Cancel</string>
    <string name="notification_channel_backup_worker">Backup Worker Channel</string>
    <string name="notification_channel_backup_worker_success">Backup Worker Success Channel</string>
    <string name="notification_channel_backup_worker_error">Backup Worker Error Channel</string>
    <string name="notification_channel_outdated_backup">Outdated Backup Channel</string>
    <string name="notification_channel_foreground_media_scan">Foreground Media Scan Channel</string>
    <string name="backup_notification_error">Error!</string>
    <string name="backup_notification_noid">The provided task did not have an ID!</string>
    <string name="backup_notification_ongoing_title">Backing up %1$s…</string>
    <string name="backup_notification_ongoing_">Zipping…</string>
    <string name="backup_notification_ongoing_failure">Backup Failure!</string>
    <string name="backup_notification_task_could_not_write_to_storage">Task: %1$s, could not write to storage: %2$s</string>
    <string name="backup_notification_storage_was_removed">The storage for %1$s was removed prematurely. Stopping Backup!</string>
    <string name="backup_notification_ongoing_error_with_source">Error: Could not backup!</string>
    <string name="backup_notification_ongoing_error_with_source_details">There was an error backing up %1$s. We could not read the source folder!</string>
    <string name="backup_notification_ongoing_storing">Storing Folder…</string>
    <string name="backup_notification_ongoing_encrypting">Encrypting…</string>
    <string name="backup_notification_done">Backup Done!</string>
    <string name="backup_notification_done_remove_media">%1$s was sucessfully backed up. You can safely remove the media.</string>
    <string name="backup_notification_unspecified_failure">Backup Failure!</string>
    <string name="backup_notification_unspecified_failure_description">Task: %1$s, error: %2$s</string>
    <string name="postpone_outdated_notification">Ignore for 14 Days</string>

</resources>