<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_of_the_task" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameInput">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp">

            <TextView
                android:id="@+id/sourceUri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:text="@string/source_folder"
                app:layout_constraintBottom_toBottomOf="@+id/sourceUriFolderButton"
                app:layout_constraintEnd_toStartOf="@+id/sourceUriFileButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/sourceUriFolderButton" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/sourceList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@+id/sourceUriFolderButton"
                app:layout_constraintStart_toStartOf="@+id/sourceUri"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourceUriFileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minWidth="0dp"
                android:visibility="gone"
                app:icon="@drawable/icon_insert_drive_file"
                app:iconPadding="0dp"
                app:iconTint="?attr/colorOnPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/sourceUriFolderButton"
                app:layout_constraintEnd_toStartOf="@+id/sourceUriFolderButton"
                app:layout_constraintTop_toTopOf="@+id/sourceUriFolderButton" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/sourceUriFolderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                app:icon="@drawable/icon_folder"
                app:iconPadding="0dp"
                app:iconTint="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/add_down_icon_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sourceList"
                app:srcCompat="@drawable/icon_arrow_downward"
                app:tint="?attr/colorPrimary" />

            <TextView
                android:id="@+id/targetLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:text="@string/target_folder"
                app:layout_constraintEnd_toStartOf="@+id/targetUriFolderButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/targetUriMetadata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="@+id/targetLabel"
                app:layout_constraintStart_toStartOf="@+id/targetLabel"
                app:layout_constraintTop_toBottomOf="@+id/targetLabel" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/targetUriFolderButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="0dp"
                app:icon="@drawable/icon_folder"
                app:iconPadding="0dp"
                app:iconTint="?attr/colorOnPrimary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/targetLabel" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add_fakelistheader_encrypt"
                android:textAlignment="textEnd"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sourceUriFolderButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/warningTimeoutInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:errorEnabled="true"
        app:helperText="@string/add_view_warning_timeout_helper"
        app:helperTextEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3"
        app:passwordToggleEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/warningTimeoutTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/warningTimeout"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pwInput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/warningTimeoutInput">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pwTextfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/layoutNoPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:padding="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pwInput">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:contentDescription="@string/add_warning_icon_description"
            app:srcCompat="@drawable/icon_lock_open"
            app:tint="#D00000" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/warning_no_password_set"
            android:textColor="#D00000" />
    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:clickable="false"
        android:contentDescription="@string/add_fabicon_description"
        android:enabled="true"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutNoPassword"
        app:srcCompat="@drawable/icon_save" />

</androidx.constraintlayout.widget.ConstraintLayout>